[package]
name = "bot"
version = "0.1.0"
authors = ["takashiidobe <idobetakashi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[dependencies.serenity]
default-features = false
features = [
    "standard_framework",
    "rustls_backend"
]
version = "0.8"
